parser.py

from typing import NoReturn, Optional, Callable, Union, cast
from ast_nodes import Program
from ast_nodes import StructDef
from ast_nodes import EnumDecl
from ast_nodes import ProcDecl
from ast_nodes import Parameter
from ast_nodes import Parameter
from ast_nodes import Declaration
from ast_nodes import Declarator
from ast_nodes import FuncDecl
from ast_nodes import Parameter
from ast_nodes import Parameter
from ast_nodes import Declaration
from ast_nodes import Declarator
from ast_nodes import Parameter
from ast_nodes import Declaration
from ast_nodes import Declarator
from ast_nodes import Declarator
from ast_nodes import DerefExpr, FieldAccess, Identifier, SubscriptExpr
from ast_nodes import AssignStmt, CallStmt
from ast_nodes import DerefExpr, FieldAccess, Identifier, SubscriptExpr
from ast_nodes import BinOp
from ast_nodes import BinOp
from ast_nodes import BinOp
from ast_nodes import BinOp
from ast_nodes import BinOp
from ast_nodes import IfStmt
from ast_nodes import IfStmt
from ast_nodes import IfStmt
from ast_nodes import IfStmt
from ast_nodes import WhileStmt
from ast_nodes import ForStmt
from ast_nodes import RepeatUntilStmt
from ast_nodes import AsmBlock, AssignStmt, BreakStmt, CallStmt, ContinueStmt, ForStmt, IfStmt, IncbinDirective, ReturnStmt, SegmentDirective, ErrorDirective, WarningDirective, InfoDirective, WhileStmt, RepeatUntilStmt, SwitchStmt, SwitchCase
from tokenizer import Tokenizer, Token
from token_types import *
from ast_nodes import *
from errors import SyntaxError

class Parser:
    """Parse ZAP source text into an AST program."""
    def __init__(self, source: str, filename: str | None = None, initial_struct_names: Optional[set[str]] = None) -> None:
        """Initialize parser state and tokenize the input source."""
        self.filename: str = filename or "<input.act>"
        # Remove BOM if present (can be \ufeff or UTF-8 BOM misinterpreted as 'ï»¿')
        if source.startswith('\ufeff'):
            source = source[1:]
        elif source.startswith('ï»¿'):
            # UTF-8 BOM misinterpreted by non-UTF-8-aware decoder
            source = source[3:]
        self.source: str = source
        self.source_lines: list[str] = source.splitlines()
        self.tok = Tokenizer(source)
        self.tok.tokenize()
        self.tokens: list[Token] = self.tok._getTokens()        
        # Current token - always maintain a Token (use EOF token when empty)
        self.cur: Token = self.tokens[0] if self.tokens else Token(TOK_EOF, "", 1, 1)
        self.pos = 0
        # Debug maps
        self.current_proc_name: str | None = None
        # Statement source: id(node) -> (filename, line, col, line_text)
        self.stmt_src: dict[int, tuple[str, int, int, str]] = {}
        # Declaration source: (filename, line, col, line_text)
        self.local_decl_src: dict[tuple[str, str], tuple[str, int, int, str]] = {}
        self.global_decl_src: dict[str, tuple[str, int, int, str]] = {}
        # Proc/Func source: name -> (filename, line, col, line_text)
        self.proc_src: dict[str, tuple[str, int, int, str]] = {}
        self.param_src: dict[tuple[str, str], tuple[str, int, str]] = {}
        # Struct names for type checking in parse_declaration
        self.struct_names: set[str] = set((s.upper() for s in (initial_struct_names or set())))

    def _readable_token(self, ttype: str, tvalue: Optional[str] = None) -> str:
        """Return a human-readable description for a token type/value.

        The mapping contains either a string or a callable that accepts an optional
        token value and returns a string. Type annotations are explicit to avoid
        Pylance errors where the inferred type could be "object".
        """
        mapping: dict[str, Union[str, Callable[[Optional[str]], str]]] = {
            TOK_IDENT: "identifier",
            TOK_NUMBER: "number",
            TOK_STRING: "string",
            TOK_KEYWORD: (lambda v: f"keyword '{v}'" if v else "keyword"),
            TOK_TYPE: (lambda v: f"type '{v}'" if v else "type"),
            TOK_TYPEMOD: "type modifier",
            TOK_PTR: "pointer '^'",
            TOK_DELIM: "delimiter",
            TOK_EQU: "'='",
            TOK_OP: (lambda v: f"'{v}'" if v else "operator"),
            TOK_AT: "'@'",
            TOK_EOF: "end of file",
            TOK_SQB: "square brackets '[]'",
            TOK_PREPROC: "preprocessor directive",
            TOK_ASM_BLOCK: "assembly block",
            TOK_DECLMOD: "declaration modifier",
            TOK_LBRACE: "'('",
            TOK_RBRACE: "')'",
            TOK_LCURLY: "'{'",
            TOK_RCURLY: "'}'",
        }
        val: Optional[Union[str, Callable[[Optional[str]], str]]] = mapping.get(ttype)
        if val is None:
            return ttype
        if isinstance(val, str):
            return val
        # At this point val must be a callable; cast it for the type checker
        return cast(Callable[[Optional[str]], str], val)(tvalue)

    def advance(self) -> None:
        """Advance to the next token in the stream."""
        self.pos += 1
        if self.pos < len(self.tokens):
            self.cur: Token = self.tokens[self.pos]
        else:
            self.cur = Token(TOK_EOF, "", self.cur.line, self.cur.col)

    def _peek_next(self) -> Token | None:
        """Peek at the token after the current one without advancing"""
        next_pos: int = self.pos + 1
        if next_pos < len(self.tokens):
            return self.tokens[next_pos]
        return None

    def expect(self, kind, value=None) -> None:
        """Consume the expected token or raise a syntax error."""
        if self.cur.type != kind:
            expected = self._readable_token(kind, value)
            got = self._readable_token(self.cur.type, self.cur.value)
            raise SyntaxError(
                f'Expected {expected}, got {got}',
                line=self.cur.line,
                col=self.cur.col,
            )
        if value is not None and self.cur.value != value:
            raise SyntaxError(
                f"Expected '{value}', got '{self.cur.value}'",
                line=self.cur.line,
                col=self.cur.col,
            )
        self.advance()

    def error(self, msg) -> NoReturn:
        """Raise a syntax error at the current token position."""
        raise SyntaxError(
            msg,
            line=self.cur.line,
            col=self.cur.col
        )


    def parse_program(self) -> Program:
        """Parse the entire token stream into a Program AST."""
        decls = []
        procs = []

        # FIRST PASS: Collect struct names
        # This allows us to recognize struct names as types in declarations
        temp_pos: int = self.pos
        temp_cur: Token = self.cur
        while self.cur.type != TOK_EOF:
            if self.cur.type == TOK_KEYWORD and self.cur.value == "STRUCT":
                self.advance()  # skip "struct"
                if self.cur.type == TOK_IDENT:
                    self.struct_names.add(self.cur.value.upper())
                # Skip to end of struct
                while self.cur.type != TOK_EOF and not (self.cur.type == TOK_KEYWORD and self.cur.value == "END"):
                    self.advance()
                if self.cur.type == TOK_KEYWORD:
                    self.advance()  # skip "end"
            elif self.cur.type == TOK_KEYWORD and self.cur.value == "ENUM":
                # Collect enum name for first-pass recognition (END-style enums)
                self.advance()  # skip "enum"
                # Optional base type (byte/word)
                if self.cur.type == TOK_TYPE:
                    self.advance()
                if self.cur.type == TOK_IDENT:
                    self.struct_names.add(self.cur.value.upper())
                # Skip to closing 'END'
                while self.cur.type != TOK_EOF and not (self.cur.type == TOK_KEYWORD and self.cur.value == "END"):
                    self.advance()
                if self.cur.type == TOK_KEYWORD and self.cur.value == "END":
                    self.advance()
            else:
                self.advance()
        
        # RESET to beginning
        self.pos: int = temp_pos
        if self.pos < len(self.tokens):
            self.cur: Token = self.tokens[self.pos]

        # SECOND PASS: Parse everything
        while self.cur.type != TOK_EOF:
            if self.cur.type == TOK_PREPROC and self.cur.value.upper() == ".ERROR":
                # Parse .error directive at top level
                self.advance()
                if self.cur.type != TOK_STRING:
                    self.error("Expected string after .error")
                msg: str = self.cur.value
                self.advance()
                procs.append(ErrorDirective(msg, self.cur.line, self.cur.col))
            elif self.cur.type == TOK_PREPROC and self.cur.value.upper() == ".WARNING":
                # Parse .warning directive at top level
                self.advance()
                if self.cur.type != TOK_STRING:
                    self.error("Expected string after .warning")
                msg: str = self.cur.value
                self.advance()
                procs.append(WarningDirective(msg, self.cur.line, self.cur.col))
            elif self.cur.type == TOK_PREPROC and self.cur.value.upper() == ".INFO":
                # Parse .info directive at top level
                self.advance()
                if self.cur.type != TOK_STRING:
                    self.error("Expected string after .info")
                msg: str = self.cur.value
                self.advance()
                procs.append(InfoDirective(msg, self.cur.line, self.cur.col))
            elif self.cur.type == TOK_OP and self.cur.value == ".":
                # Handle . followed by IDENT (preprocessor directive like .include)
                self.advance()
                if self.cur.type == TOK_IDENT:
                    directive: str = self.cur.value.upper()
                    self.advance()
                    if directive == "INCLUDE":
                        if self.cur.type != TOK_STRING:
                            self.error("Expected string after .include")
                        # Skip .include directives for now
                        self.advance()
                    elif directive == "ERROR":
                        if self.cur.type != TOK_STRING:
                            self.error("Expected string after .error")
                        msg: str = self.cur.value
                        self.advance()
                        procs.append(ErrorDirective(msg, self.cur.line, self.cur.col))
                    elif directive == "WARNING":
                        if self.cur.type != TOK_STRING:
                            self.error("Expected string after .warning")
                        msg: str = self.cur.value
                        self.advance()
                        procs.append(WarningDirective(msg, self.cur.line, self.cur.col))
                    elif directive == "INFO":
                        if self.cur.type != TOK_STRING:
                            self.error("Expected string after .info")
                        msg: str = self.cur.value
                        self.advance()
                        procs.append(InfoDirective(msg, self.cur.line, self.cur.col))
                    else:
                        # Unknown directive: try to skip optional argument (string or identifier)
                        if self.cur.type == TOK_STRING:
                            # skip module/include style string argument
                            self.advance()
                        # otherwise ignore and continue
                        pass
                else:
                    self.error("Expected identifier after '.'")
            elif self.cur.type == TOK_KEYWORD and self.cur.value == "STRUCT":
                procs.append(self.parse_struct_def())
            elif self.cur.type == TOK_KEYWORD and self.cur.value == "ENUM":
                decls.append(self.parse_enum())
            elif self.cur.type in (TOK_TYPE, TOK_TYPEMOD):
                decls.append(self.parse_declaration())
            elif self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names:
                # Struct type declaration at top level
                decls.append(self.parse_declaration())
            elif self.cur.type == TOK_KEYWORD and self.cur.value == "PROC":
                procs.append(self.parse_proc())
            elif self.cur.type == TOK_KEYWORD and self.cur.value == "FUNC":
                procs.append(self.parse_func())
            elif self.cur.type == TOK_IDENT:
                # Skip stray identifiers (like BOM misinterpreted as 'Ï')
                self.advance()
            else:
                self.error("Expected declaration, PROC, FUNC, or STRUCT")
        program = Program(decls, procs)
        program.debug = {
            "stmt_src": self.stmt_src,
            "local_decl_src": self.local_decl_src,
            "global_decl_src": self.global_decl_src,
            "proc_src": self.proc_src,
            "source_lines": self.source_lines,
            "filename": self.filename,
        }
        return program


    def parse_struct_def(self) -> StructDef:
        """Parse struct definition: struct Name field_list end"""
        start_line: int = self.cur.line
        start_col: int = self.cur.col
        self.expect(TOK_KEYWORD, "STRUCT")
        
        struct_name: str = self.cur.value
        self.expect(TOK_IDENT)

        # Optional struct-level declaration modifiers: #PORT #RD #WR
        struct_is_port: bool = False
        struct_port_rd: Optional[bool] = None
        struct_port_wr: Optional[bool] = None
        struct_noexport: bool = False
        struct_export: bool = False
        while self.cur.type == TOK_DECLMOD:
            val: str = self.cur.value.upper()
            if val == 'PORT':
                struct_is_port = True
            elif val == 'RD':
                struct_port_rd = True
            elif val == 'WR':
                struct_port_wr = True
            elif val == 'NOEXPORT':
                struct_noexport = True
            elif val == 'EXPORT':
                struct_export = True
            else:
                self.error(f"Unsupported struct modifier '{val}'")
            self.advance()

        fields = []
        seen_names: set[str] = set()
        
        # Parse field list until END
        while not (self.cur.type == TOK_KEYWORD and self.cur.value == "END"):
            # Parse: [^] type [^] IDENT [dimensions] [ address_spec ] [decl_modifiers]
            # Check for pointer prefix first (structs historically allowed only this).
            is_pointer = False
            if self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^"):
                is_pointer = True
                self.advance()

            # type (either built-in like byte/word, or a struct name)
            if self.cur.type == TOK_TYPE:
                type_name: str = self.cur.value
                type_tok: Token = self.cur
                self.advance()
            elif self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names:
                type_name: str = self.cur.value
                type_tok: Token = self.cur
                self.advance()
            else:
                self.error(f"Expected type in struct field, got {self._readable_token(self.cur.type, self.cur.value)}")

            # Allow pointer suffix after type (type ^name), matching normal declarations.
            if not is_pointer and (self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^")):
                is_pointer = True
                self.advance()

            field_type = TypeNode(type_name, is_pointer)
            
            # field name
            field_name: str = self.cur.value
            if field_name.startswith('_'):
                self.error("Field names cannot start with underscore")
            self.expect(TOK_IDENT)
            
            if field_name in seen_names:
                raise SyntaxError(f"Duplicate field '{field_name}' in struct '{struct_name}'", 
                                line=self.cur.line, col=self.cur.col)
            seen_names.add(field_name)
            
            # Parse optional array dimensions
            array_sizes = None
            if self.cur.type == TOK_OP and self.cur.value == "[":
                array_sizes = []
                while self.cur.type == TOK_OP and self.cur.value == "[":
                    self.advance()
                    # Parse array size expression
                    size_expr = self.parse_expr()
                    array_sizes.append(size_expr)
                    self.expect(TOK_OP, "]")
            
            # Parse optional address spec
            field_addr = None
            if self.cur.type == TOK_AT:
                self.advance()
                field_addr = self.parse_expr()

            # Optional trailing modifiers on field: #PORT, #RD, #WR
            field_is_port = False
            field_port_rd: Optional[bool] = None
            field_port_wr: Optional[bool] = None
            while self.cur.type == TOK_DECLMOD:
                val: str = self.cur.value.upper()
                if val == 'PORT':
                    field_is_port = True
                elif val == 'RD':
                    field_port_rd = True
                elif val == 'WR':
                    field_port_wr = True
                else:
                    self.error(f"Unsupported field modifier '{val}'")
                self.advance()

            fields.append(StructField(field_type, field_name, field_addr, array_sizes,
                                      is_port=field_is_port, port_rd=field_port_rd, port_wr=field_port_wr))
        
        self.expect(TOK_KEYWORD, "END")
        return StructDef(
            struct_name,
            fields,
            is_port=struct_is_port,
            port_rd=struct_port_rd,
            port_wr=struct_port_wr,
            noexport=struct_noexport,
            export=struct_export,
            line=start_line,
            col=start_col,
        )

    def parse_enum(self) -> EnumDecl:
        """Parse enum declaration (END-style only):
           enum [type] Name
               item [= value]
               [,...]
           END
        """
        start_line: int = self.cur.line
        start_col: int = self.cur.col
        self.expect(TOK_KEYWORD, "ENUM")
        # optional base type
        base = 'byte'
        if self.cur.type == TOK_TYPE:
            base: str = self.cur.value
            self.advance()
        name: str = self.cur.value
        self.expect(TOK_IDENT)

        enum_noexport: bool = False
        enum_export: bool = False
        while self.cur.type == TOK_DECLMOD:
            val: str = self.cur.value.upper()
            if val == 'NOEXPORT':
                enum_noexport = True
            elif val == 'EXPORT':
                enum_export = True
            else:
                self.error(f"Unsupported enum modifier '{val}'")
            self.advance()

        items = []
        # END-style enum, parse until END
        while not (self.cur.type == TOK_KEYWORD and self.cur.value == "END"):
            item_line: int = self.cur.line
            item_col: int = self.cur.col
            if self.cur.type != TOK_IDENT:
                self.error("Expected enum member name or END")
            item_name: str = self.cur.value
            if item_name.startswith('_'):
                self.error("Enum member names cannot start with underscore")
            self.expect(TOK_IDENT)
            item_value = None
            if self.cur.type == TOK_EQU:
                self.advance()
                item_value = self.parse_expr()
            items.append(EnumItem(item_name, item_value, line=item_line, col=item_col))
            # optional trailing comma
            if self.cur.type == TOK_DELIM and self.cur.value == ',':
                self.advance()
                continue
        self.expect(TOK_KEYWORD, "END")
        return EnumDecl(name, base, items, noexport=enum_noexport, export=enum_export, line=start_line, col=start_col)


    def parse_proc(self) -> ProcDecl:
        """Parse a procedure declaration and its body."""
        start_line: int = self.cur.line
        start_col: int = self.cur.col
        self.expect(TOK_KEYWORD, "PROC")
        name: str = self.cur.value
        self.expect(TOK_IDENT)

        # record proc source info
        line_text: str = self.source_lines[start_line-1] if 1 <= start_line <= len(self.source_lines) else ""
        self.proc_src[name] = (self.filename, start_line, start_col, line_text)
        self.current_proc_name = name

        locals = []
        body = []
        params = []
        seen_names: set[str] = set()

        self.expect(TOK_LBRACE)
        # parse parameter list
        if self.cur.type != TOK_RBRACE:
            p: Parameter = self.parse_parameter()
            if p.name in seen_names:
                raise SyntaxError(f"Duplicate parameter '{p.name}' in procedure", line=p.line, col=p.col)
            seen_names.add(p.name)
            params.append(p)
            while self.cur.type == TOK_DELIM and self.cur.value == ',':
                self.advance()
                p: Parameter = self.parse_parameter()
                if p.name in seen_names:
                    raise SyntaxError(f"Duplicate parameter '{p.name}' in procedure", line=p.line, col=p.col)
                seen_names.add(p.name)
                params.append(p)
        self.expect(TOK_RBRACE)

        # Optional declaration modifiers: #KEEP, #NOEXPORT, #EXPORT
        keep = False
        noexport = False
        export = False
        while self.cur.type == TOK_DECLMOD:
            val: str = self.cur.value.upper()
            if val == 'KEEP':
                keep = True
            elif val == 'NOEXPORT':
                noexport = True
            elif val == 'EXPORT':
                export = True
            else:
                self.error(f"Unsupported declaration modifier '{val}'")
            self.advance()

        def _is_declaration_start() -> bool:
            """Check if current position starts a declaration"""
            if self.cur.type in (TOK_TYPE, TOK_TYPEMOD):
                return True
            if self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^"):
                return True
            # For struct types, check if next token is an identifier (variable name)
            # NOT a dot (which would indicate field access like node.data)
            if self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names:
                # Look ahead to see if next token is an identifier or [ or @ or = or ^ (pointer)
                # If it's a dot, this is a statement, not a declaration
                next_tok: Token | None = self.tokens[self.pos+1] if self.pos+1 < len(self.tokens) else None
                if next_tok and (next_tok.type == TOK_IDENT or 
                                next_tok.type == TOK_PTR or
                                next_tok.type in (TOK_SQB, TOK_AT) or
                                (next_tok.type == TOK_OP and next_tok.value in ("[", "@", "^")) or
                                next_tok.type == TOK_EQU):
                    return True
                # If next token is dot or anything else, it's not a declaration
                return False
            return False

        while _is_declaration_start():
            decl: Declaration = self.parse_declaration()
            for d in decl.declarators:
                if d.name in seen_names:
                    raise SyntaxError(f"Duplicate local '{d.name}' in procedure", line=d.line, col=d.col)
                seen_names.add(d.name)
            locals.append(decl)

        while not (self.cur.type == TOK_KEYWORD and self.cur.value == "END"):
            body.append(self.parse_stmt())

        # consume END keyword
        self.expect(TOK_KEYWORD, "END")

        self.current_proc_name = None
        return ProcDecl(name, params, locals, body, keep=keep, noexport=noexport, export=export)

    def parse_func(self) -> FuncDecl:
        """Parse a function declaration and its body."""
        start_line: int = self.cur.line
        start_col: int = self.cur.col
        self.expect(TOK_KEYWORD, "FUNC")
        
        # return type: can be TYPE (byte/word) or STRUCT_NAME
        ret_type_tok: Token = self.cur
        if self.cur.type == TOK_TYPE:
            self.advance()
            ret_type_base: str = ret_type_tok.value
        elif self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names:
            # Struct return type
            ret_type_base: str = self.cur.value
            self.advance()
        else:
            self.error(f"Expected type for function return, got {self._readable_token(self.cur.type, self.cur.value)}")
        
        ret_is_pointer = False
        if self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^"):
            ret_is_pointer = True
            self.advance()
        
        name: str = self.cur.value
        self.expect(TOK_IDENT)
        
        locals = []
        body = []
        params = []
        seen_names: set[str] = set()
        
        self.expect(TOK_LBRACE)
        # parse parameter list
        if self.cur.type != TOK_RBRACE:
            p: Parameter = self.parse_parameter()
            if p.name in seen_names:
                raise SyntaxError(f"Duplicate parameter '{p.name}' in function", line=p.line, col=p.col)
            seen_names.add(p.name)
            params.append(p)
            while self.cur.type == TOK_DELIM and self.cur.value == ',':
                self.advance()
                p: Parameter = self.parse_parameter()
                if p.name in seen_names:
                    raise SyntaxError(f"Duplicate parameter '{p.name}' in function", line=p.line, col=p.col)
                seen_names.add(p.name)
                params.append(p)
        self.expect(TOK_RBRACE)
        
        # Optional declaration modifiers: #KEEP, #NOEXPORT, #EXPORT
        keep = False
        noexport = False
        export = False
        while self.cur.type == TOK_DECLMOD:
            val: str = self.cur.value.upper()
            if val == 'KEEP':
                keep = True
            elif val == 'NOEXPORT':
                noexport = True
            elif val == 'EXPORT':
                export = True
            else:
                self.error(f"Unsupported declaration modifier '{val}'")
            self.advance()
        
        while self.cur.type in (TOK_TYPE, TOK_TYPEMOD) or (self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names):
            decl: Declaration = self.parse_declaration()
            for d in decl.declarators:
                if d.name in seen_names:
                    raise SyntaxError(f"Duplicate local '{d.name}' in function", line=d.line, col=d.col)
                seen_names.add(d.name)
            locals.append(decl)
        
        while not (self.cur.type == TOK_KEYWORD and self.cur.value == "END"):
            body.append(self.parse_stmt())
        
        # consume END keyword
        self.expect(TOK_KEYWORD, "END")

        line_text: str = self.source_lines[start_line-1] if 1 <= start_line <= len(self.source_lines) else ""
        self.proc_src[name] = (self.filename, start_line, start_col, line_text)

        return FuncDecl(name, TypeNode(ret_type_base, ret_is_pointer), params, locals, body, keep=keep, noexport=noexport, export=export)

    def parse_parameter(self) -> Parameter:
        """Parse a single parameter with optional default value."""
        # Note: the 'type' token can be TOK_TYPE (byte/word) or a STRUCT_NAME, optionally const
        is_const = False
        if self.cur.type == TOK_TYPEMOD and self.cur.value.upper() == "CONST":
            is_const = True
            self.advance()
        
        type_tok: Token = self.cur
        if self.cur.type == TOK_TYPE:
            self.advance()
            type_base: str = type_tok.value
        elif self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names:
            # Struct parameter type
            type_base: str = self.cur.value
            self.advance()
        else:
            self.error(f"Expected type for parameter, got {self._readable_token(self.cur.type, self.cur.value)}")
        
        is_pointer = False
        if self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^"):
            is_pointer = True
            self.advance()
        
        name: str = self.cur.value
        name_line: int = self.cur.line
        name_col: int = self.cur.col
        self.expect(TOK_IDENT)
        
        is_array = False
        if self.cur.type == TOK_OP and self.cur.value == '[':
            self.advance()
            self.expect(TOK_OP, ']')
            is_array = True
        
        # Parse optional default value: = expression
        default_value = None
        if self.cur.type == TOK_EQU:
            self.advance()
            default_value = self.parse_expr()
        
        return Parameter(TypeNode(type_base, is_pointer), name, is_array, default_value, name_line, name_col)

    def parse_init_value(self):
        """Parse an initializer value: either a nested list { ... } or an expression."""
        if self.cur.type == TOK_LCURLY:
            # Nested list initializer
            self.advance()
            values = []
            if self.cur.type != TOK_RCURLY:
                values.append(self.parse_init_value())
                while self.cur.type == TOK_DELIM and self.cur.value == ',':
                    self.advance()
                    # Allow trailing comma
                    if self.cur.type == TOK_RCURLY:
                        break
                    values.append(self.parse_init_value())
            self.expect(TOK_RCURLY)
            return ListInit(values)
        else:
            # Regular expression
            return self.parse_expr()

    def parse_declaration(self) -> Declaration:
        """Parse a variable declaration with modifiers and declarators."""
        is_const = False
        is_static = False
        is_port = False
        port_rd = False
        port_wr = False

        # CONST or STATIC prefix (PORT is now a declaration modifier #PORT)
        while self.cur.type == TOK_TYPEMOD:
            if self.cur.value.upper() == "CONST":
                is_const = True
            elif self.cur.value.upper() == "STATIC":
                is_static = True
            else:
                self.error("Unsupported type modifier")
            self.advance()

        # Check for pointer prefix - two possible orders:
        # 1. ^type name (pointer prefix first - used in structs and procs)
        # 2. type ^name (pointer suffix after type - global declarations)
        is_pointer = False

        # Try order 1: ^type name
        if self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^"):
            is_pointer = True
            self.advance()

        # type (built-in or struct name)
        type_tok: Token = self.cur
        if self.cur.type == TOK_TYPE:
            # Built-in type (byte, word)
            self.expect(TOK_TYPE)
        elif self.cur.type == TOK_IDENT and self.cur.value.upper() in self.struct_names:
            # Struct type
            self.advance()
        else:
            self.expect(TOK_TYPE)

        # Check for order 2: type ^name (pointer suffix after type)
        if not is_pointer and (self.cur.type == TOK_PTR or (self.cur.type == TOK_OP and self.cur.value == "^")):
            is_pointer = True
            self.advance()

        def _is_sqb(val=None):
            """Check for a square bracket token, optionally matching a value."""
            # Accept either dedicated square-bracket tokens or OP tokens carrying '[' or ']'
            if self.cur.type == TOK_SQB:
                return val is None or self.cur.value == val
            if self.cur.type == TOK_OP and self.cur.value in ("[", "]"):
                return val is None or self.cur.value == val
            return False

        def _expect_sqb(val) -> None:
            """Consume an expected square bracket token."""
            if not _is_sqb(val):
                self.error(f"Expected '{val}'")
            self.advance()

        def parse_declarator() -> Declarator:
            """Parse a single declarator including arrays, init, and address."""
            # ident
            name: str = self.cur.value
            if name.startswith('_'):
                self.error("Variable names cannot start with underscore")
            decl_line: int = self.cur.line
            decl_col: int = self.cur.col
            self.expect(TOK_IDENT)

            # Parse array dimensions (may have multiple [size] clauses)
            array_sizes = []
            while _is_sqb("["):
                # [expr] or []
                self.advance()
                if not _is_sqb("]"):
                    array_sizes.append(self.parse_expr())
                else:
                    # [] → infer size from initializer
                    array_sizes.append(IntLiteral(-1))
                _expect_sqb("]")  # closing ]

            # For backward compatibility, keep array_size for single dimension
            array_size = array_sizes[0] if len(array_sizes) == 1 else None

            init = None
            address = None

            # init / address (any order, at most once each)
            while True:
                if self.cur.type == TOK_EQU and init is None:
                    self.advance()
